Part 2/2.02/todo-backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: heka27/todo-backend
        ports:
        - containerPort: 3001
